--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "admiralfebnet"
+  },
+  "targets": {
+    "admiralfebnet": {
+      "hosting": {
+        "test": [
+          "test-admiralfeb"
+        ]
+      }
+    }
   }
 }
