--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "test": [
           "test-admiralfeb"
+        ],
+        "prod": [
+          "admiralfebnet"
         ]
       }
     }
