--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "build-prod": "ng build --prod --aot",
     "test": "ng test --watch=true",
+    "test-single-headless": "ng test --watch=false --browsers=PhantomJS",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "test-single-headless": "ng test --watch=false --browsers=PhantomJS"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
