--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "build": "ng build",
     "build-prod": "ng build --prod --aot",
     "test": "ng test --watch=true",
-    "test-single-headless": "ng test --watch=false --browsers=PhantomJS",
+    "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
+    "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy-test": "./scripts/deploy-test.sh",
+    "deploy-test": "firebase deploy --only hosting:test --token $FIREBASE_TOKEN --message 'Version: $npm_package_version' --non-interactive",
     "deploy-prod": "./scripts/deploy-prod.sh"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.11",
-    "@angular/cdk": "^7.3.6",
-    "@angular/common": "^7.2.11",
-    "@angular/compiler": "^7.2.11",
-    "@angular/core": "^7.2.11",
-    "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
-    "@angular/material": "^7.3.6",
-    "@angular/platform-browser": "^7.2.11",
-    "@angular/platform-browser-dynamic": "^7.2.11",
-    "@angular/router": "^7.2.11",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.13",
+    "@angular/forms": "^7.2.13",
+    "@angular/http": "^7.2.13",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/router": "^7.2.13",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "bootstrap": "^4.3.0",
     "core-js": "^2.6.4",
@@ -39,25 +40,25 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "^7.3.7",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.13",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.26",
     "codelyzer": "~4.5.0",
+    "firebase-tools": "^6.6.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.1",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-junit-reporter": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "phantomjs-prebuilt": "^2.1.16",
     "protractor": "^5.4.2",
+    "puppeteer": "^1.14.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "^3.2.4"
