--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
     paths:
       - dist/
       
-test: 
+test-unit: 
   stage: test
   cache:
     policy: pull
@@ -29,6 +29,16 @@ test:
     # install dependencies to use chrome w/ puppeteer
     - apt update && apt install -yq gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
     - npm run test-ci
+
+test-e2e:
+  stage: test
+  cache:
+    policy: pull
+    paths:
+      - node_modules/
+  script:
+    # install dependencies to use chrome w/ puppeteer
+    - apt update && apt install -yq gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
     - npm run e2e-ci
 
 deploy:test:
@@ -48,7 +58,7 @@ deploy:test:
   script:
     - npm run deploy
 
-deploy:lab:
+pages:
   stage: deploy-lab
   script:
   - npm install -g @angular/cli
@@ -63,6 +73,8 @@ deploy:lab:
     - public
   dependencies: 
     - build
+  only: 
+    - pages
   when: manual
 
 deploy:prod:
