--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,9 @@ build:
   script:
     - npm install --quiet
     - npm run build-prod
+  except:
+    changes:
+      - .gitlab-ci.yml
   artifacts:
     paths:
       - dist/
@@ -41,7 +44,7 @@ test-e2e:
     - apt update && apt install -yq gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
     - npm run e2e-ci
 
-deploy:test:
+deploy-test:
   stage: deploy-test
   environment: 
     name: production
@@ -77,7 +80,7 @@ pages:
     - pages
   when: manual
 
-deploy:prod:
+deploy-prod:
   stage: deploy-prod
   environment: 
     name: production
