--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build-prod": "ng build --prod --aot",
     "test": "ng test --watch=true",
     "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
+    "e2e": "ng e2e",
     "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "deploy-test": "firebase deploy --only hosting:test --token $FIREBASE_TOKEN --message 'Version: $npm_package_version' --non-interactive",
-    "deploy-prod": "firebase deploy --only hosting:prod --token $FIREBASE_TOKEN --message 'Version: $npm_package_version' --non-interactive"
+    "deploy-test": "firebase deploy --only hosting:test -m $npm_package_version",
+    "deploy-prod": "firebase deploy --only hosting:prod -m $npm_package_version"
   },
   "private": true,
   "dependencies": {
@@ -44,12 +44,12 @@
     "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "^7.2.13",
-    "@types/jasmine": "^2.8.16",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.26",
     "codelyzer": "~4.5.0",
     "firebase-tools": "^6.6.0",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
