Revert "update to gitlab-ci.yml"
This reverts commit 72c771c95642b4f48f2f357171b305bb162bc6d5.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ deploy-test:
     name: test
     url: $FIREBASE_URL_TEST
   only: 
-   - /^release//.+/i
+   - release
   when: manual
   dependencies:
     - build
