--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser": "^8.2.12",
     "@angular/platform-browser-dynamic": "^8.2.12",
     "@angular/router": "^8.2.12",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.4",
     "hammerjs": "^2.0.8",
@@ -43,16 +43,18 @@
     "@angular/cli": "^8.3.14",
     "@angular/compiler-cli": "^8.2.12",
     "@angular/language-service": "^8.2.12",
-    "@types/jasmine": "^3.3.12",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.26",
-    "codelyzer": "^5.0.1",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^10.17.0",
+    "codelyzer": "^5.1.2",
     "firebase-tools": "^7.6.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.0.1",
     "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "karma-junit-reporter": "^1.2.0",
