--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run test-ci
-          npm run e2e-ci
+          npm run test-firefox-ci
+          npm run e2e-chrome-ci
           npm run build --if-present
         env:
           CI: true
