--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "build-prod": "ng build --prod --aot",
     "test": "ng test --watch=true",
-    "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
+    "test-firefox-ci": "ng test --no-watch --no-progress --browsers=FirefoxHeadless --code-coverage",
     "e2e": "ng e2e",
-    "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
+    "e2e-chrome-ci": "ng e2e --port 0 --protractor-config=e2e/protractor-chrome-ci.conf.js",
     "lint": "ng lint",
     "deploy-test": "firebase deploy --only hosting:test -m $npm_package_version",
     "deploy-prod": "firebase deploy --only hosting:prod -m $npm_package_version"
