--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           npm install
           npm run test-firefox-ci
-          npm run e2e-chrome-ci
+          npm run e2e-firefox-ci
           npm run build --if-present
         env:
           CI: true
