--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test --watch=true",
     "test-firefox-ci": "ng test --no-watch --no-progress --browsers=FirefoxHeadless --code-coverage",
     "e2e": "ng e2e",
-    "e2e-chrome-ci": "ng e2e --port 0 --protractor-config=e2e/protractor-chrome-ci.conf.js",
+    "e2e-firefox-ci": "ng e2e --port 0 --protractor-config=e2e/protractor-firefox-ci.conf.js",
     "lint": "ng lint",
     "deploy-test": "firebase deploy --only hosting:test -m $npm_package_version",
     "deploy-prod": "firebase deploy --only hosting:prod -m $npm_package_version"
@@ -46,6 +46,7 @@
     "@types/jasmine": "^3.4.4",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^10.17.0",
+    "chromedriver": "^77.0.0",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^7.6.1",
     "jasmine-core": "~3.4.0",
@@ -59,7 +60,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "karma-junit-reporter": "^1.2.0",
-    "protractor": "^5.4.2",
+    "protractor": "~5.4.0",
     "puppeteer": "^1.20.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
