--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           npm install
           npm run test-firefox-ci
+          ./node_modules/protractor/bin/webdriver-manager update
           npm run e2e-firefox-ci
           npm run build --if-present
         env:
