--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test --watch=true",
     "test-firefox-ci": "ng test --no-watch --no-progress --browsers=FirefoxHeadless --code-coverage",
     "e2e": "ng e2e",
-    "e2e-firefox-ci": "ng e2e --port 0 --protractor-config=e2e/protractor-firefox-ci.conf.js",
+    "e2e-firefox-ci": "ng e2e --protractor-config=e2e/protractor-firefox-ci.conf.js",
     "lint": "ng lint",
     "deploy-test": "firebase deploy --only hosting:test -m $npm_package_version",
     "deploy-prod": "firebase deploy --only hosting:prod -m $npm_package_version"
